--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,48 @@ netty:
   default:
     allocator:
       max-order: 3
+
 jackson:
+  module-scan: false
   deserialization:
     READ_DATE_TIMESTAMPS_AS_NANOSECONDS: false
+flyway:
+  enabled: true
+  datasources:
+    default:
+      enabled: true
+db:
+  file: ./data/mmbots
+datasources:
+  default:
+    url: 'jdbc:h2:${db.file}'
+    driver-class-name: org.h2.Driver
+    username: sa
+    password: ''
+    maximum-pool-size: 2
+    minimumIdle: 0
+r2dbc:
+  datasources:
+    default:
+      url: r2dbc:h2:file:///${db.file}
+webhook:
+  base-url:
+  commands:
+    - trigger: group-create
+      auto-complete-hint: 'groupname'
+      auto-complete-desc: 'Creates new group'
+      display-name: 'group-create'
+      description: 'Creates a new group'
+    - trigger: group-delete
+      auto-complete-hint: "yes i'm sure i want to delete groupname"
+      auto-complete-desc: 'Deletes group'
+      display-name: 'group-delete'
+      description: 'Deletes a group'
+    - trigger: group-edit
+      auto-complete-hint: 'groupname (add|remove) @username1 @username2 @username3'
+      auto-complete-desc: 'Add or remove users to/from group @groupname'
+      display-name: 'group-edit'
+      description: 'Add or remove users to/from group'
 
 mattermost:
   base-url:
